webpack config decomposition

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react", // for react
     "allowJs": true, // compiler except ts files work with Js files too
     "moduleResolution": "node", // "node" | "classic"
+    "baseUrl": ".", // for absolute import
     "esModuleInterop": true, // import Moment from "moment" (undefined) -> import Moment from "moment" [object Object]
     "allowSyntheticDefaultImports": true // import * as React from "react" -> import React from "react"
   },
