--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint:ts": "eslint \"**/*.{ts,tsx}\"",
         "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
         "lint:scss": "npx stylelint \"**/*.scss\"",
-        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+        "unit": "jest --config ./config/jest/jest.config.ts"
     },
     "keywords": [],
     "author": "",
@@ -18,7 +19,9 @@
     "devDependencies": {
         "@babel/core": "^7.17.5",
         "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
         "@svgr/webpack": "^6.2.1",
+        "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
@@ -34,6 +37,7 @@
         "eslint-plugin-react": "^7.33.2",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "jest": "^27.5.1",
         "mini-css-extract-plugin": "^2.5.3",
         "prettier": "^2.7.1",
         "sass": "^1.49.9",
@@ -42,7 +46,7 @@
         "stylelint": "^14.5.3",
         "stylelint-config-standard-scss": "^3.0.0",
         "ts-loader": "^9.2.6",
-        "ts-node": "^10.5.0",
+        "ts-node": "^10.9.1",
         "typescript": "^4.5.5",
         "webpack": "^5.69.1",
         "webpack-cli": "^4.10.0",
