Added React Testing Library / Test for Sidebar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
         "compilerOptions": {
             "module": "CommonJS" // override for ts-node
         }
-    }
+    },
+    "include": ["./config/jest/jest-setup.ts", "./src/**/*.ts", "./src/**/*.tsx"],
 }
