--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
         "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
         "lint:scss": "npx stylelint \"**/*.scss\"",
         "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-        "test:unit": "jest --config ./config/jest/jest.config.ts",
-        "test:ui": "npx loki test",
-        "test:ui:ok": "npx loki approve",
+        "unit": "jest --config ./config/jest/jest.config.ts",
         "storybook": "storybook dev -p 6006 -c ./config/storybook",
         "storybook:build": "storybook build -c ./config/storybook"
     },
@@ -55,7 +53,6 @@
         "html-webpack-plugin": "^5.5.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
-        "loki": "^0.32.0",
         "mini-css-extract-plugin": "^2.5.3",
         "prettier": "^2.7.1",
         "regenerator-runtime": "^0.13.9",
@@ -81,20 +78,5 @@
         "react-dom": "^17.0.2",
         "react-i18next": "^11.15.5",
         "react-router-dom": "^6.2.1"
-    },
-    "loki": {
-        "configurations": {
-            "chrome.laptop": {
-                "target": "chrome.app",
-                "width": 1366,
-                "height": 768,
-                "deviceScaleFactor": 1,
-                "mobile": false
-            },
-            "chrome.iphone7": {
-                "target": "chrome.app",
-                "preset": "iPhone 7"
-            }
-        }
     }
 }
