--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-i18next": "^5.1.2",
         "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "identity-obj-proxy": "^3.0.0",
