--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.8.0",
         "concurrently": "^8.2.1",
         "deelay": "^2.0.0",
         "i18next": "^21.6.11",
@@ -84,6 +85,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-i18next": "^11.15.5",
+        "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1"
     },
     "loki": {
