--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.0",
+        "axios": "^0.26.1",
         "concurrently": "^8.2.1",
         "deelay": "^2.0.0",
         "i18next": "^21.6.11",
